feat: Se agregan las vistas completas (vistas de agregar, editar y listar para los usuarios, canciones y albums)

--- a/vistas_albums/agregar_album.html
+++ b/vistas_albums/agregar_album.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agregar album</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<body style="padding: 40px 70px;">
+<body class="position-absolute start-50 translate-middle" style="top: 50%;width: 70%;">
+    <h3>Agregar album</h3>
+    <br><br>
     <form action="" method="post">
         <div class="mb-3">
             <label for="titulo" class="form-label">Titulo</label>
