--- a/listar_usuarios.html
+++ b/listar_usuarios.html
@@ -1,103 +1,59 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap demo</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-            crossorigin="anonymous">
-    </head>
-    <body>
-        <section class="intro"> <!-- style="background-image: url('https://mdbootstrap.com/img/Photos/new-templates/tables/img2.jpg');" -->
-            <div class="bg-image h-100">
-              <div class="mask d-flex align-items-center h-100" > <!--style="background-color: rgba(0,0,0,.25);"-->
-                <div class="container">
-                  <div class="row justify-content-center">
-                    <div class="col-12">
-                      <div class="card bg-dark shadow-2-strong">
-                        <div class="card-body">
-                          <div class="table-responsive">
-                            <table class="table table-dark table-borderless mb-0">
-                              <thead>
-                                <tr>
-                                  <th scope="col">EMPLOYEES</th>
-                                  <th scope="col">POSITION</th>
-                                  <th scope="col">CONTACTS</th>
-                                  <th scope="col">AGE</th>
-                                  <th scope="col">ADDRESS</th>
-                                  <th scope="col">SALARY</th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <th scope="row">Tiger Nixon</th>
-                                  <td>System Architect</td>
-                                  <td>tnixon12@example.com</td>
-                                  <td>61</td>
-                                  <td>Edinburgh</td>
-                                  <td>$320,800</td>
-                                </tr>
-                                <tr>
-                                  <th scope="row">Sonya Frost</th>
-                                  <td>Software Engineer</td>
-                                  <td>sfrost34@example.com</td>
-                                  <td>23</td>
-                                  <td>Edinburgh</td>
-                                  <td>$103,600</td>
-                                </tr>
-                                <tr>
-                                  <th scope="row">Jena Gaines</th>
-                                  <td>Office Manager</td>
-                                  <td>jgaines75@example.com</td>
-                                  <td>30</td>
-                                  <td>London</td>
-                                  <td>$90,560</td>
-                                </tr>
-                                <tr>
-                                  <th scope="row">Quinn Flynn</th>
-                                  <td>Support Lead</td>
-                                  <td>qflyn09@example.com</td>
-                                  <td>22</td>
-                                  <td>Edinburgh</td>
-                                  <td>$342,000</td>
-                                </tr>
-                                <tr>
-                                  <th scope="row">Charde Marshall</th>
-                                  <td>Regional Director</td>
-                                  <td>cmarshall28@example.com</td>
-                                  <td>36</td>
-                                  <td>San Francisco</td>
-                                  <td>$470,600</td>
-                                </tr>
-                                <tr>
-                                  <th scope="row">Haley Kennedy</th>
-                                  <td>Senior Marketing Designer</td>
-                                  <td>hkennedy63@example.com</td>
-                                  <td>43</td>
-                                  <td>London</td>
-                                  <td>$313,500</td>
-                                </tr>
-                                <tr>
-                                  <th scope="row">Tatyana Fitzpatrick</th>
-                                  <td>Regional Director</td>
-                                  <td>tfitzpatrick00@example.com</td>
-                                  <td>19</td>
-                                  <td>Warsaw</td>
-                                  <td>$385,750</td>
-                                </tr>
-                              </tbody>
-                            </table>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+</head>
+
+<body>
+  <section class="intro">
+    <!-- style="background-image: url('https://mdbootstrap.com/img/Photos/new-templates/tables/img2.jpg');" -->
+    <div class="bg-image h-100">
+      <div class="mask d-flex align-items-center h-100"> <!--style="background-color: rgba(0,0,0,.25);"-->
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-12">
+              <div class="card bg-dark shadow-2-strong">
+                <div class="card-body">
+                  <div class="table-responsive">
+                    {% if lista %}
+                    <table class="table table-dark table-borderless mb-0">
+                      <thead>
+                        <tr>
+                          <th scope="col">ID</th>
+                          <th scope="col">NOMBRE DE USUARIO</th>
+                          <th scope="col">EDITAR</th>
+                          <th scope="col">ELIMINAR</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {% for usuario in lista %}
+                        <tr>
+                          <th scope="row">{{ usuario.id }}</th>
+                          <td>{{ usuario.nombre_usuario }}</td>
+                          <td><a href=""><i class="bi bi-pencil-square"></i></a></td>
+                          <td><a href=""><i class="bi bi-trash-fill"></i></a></td>
+                        </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                    {% else %}
+                    <p>No hay registros por traer D:</p>
+                    {% endif %}
                   </div>
                 </div>
               </div>
             </div>
-          </section>
-    </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+
 </html>
