Se agregan las vistas del proyecto y funcionan los listados usando la api

--- a/vistas_albums/listar_albums.html
+++ b/vistas_albums/listar_albums.html
@@ -43,8 +43,8 @@
                               <th scope="col" colspan="2" style="text-align: center;">Acciones</th>
                             </tr>
                           </thead>
-                          <tbody>
-                            <tr style="font-size: 12px;">
+                          <tbody id="busqueda">
+                            <!-- <tr style="font-size: 12px;">
                               <th>1</th>
                               <td>un album</td>
                               <td>2020</td>
@@ -53,7 +53,7 @@
                               <td>Juan</td>
                               <td style="text-align: center;"><a href="./editar_album.html"><button class="btn btn-dark" style="font-size: 12px;">Editar</button></a></td>
                               <td style="text-align: center;"><a href="./"><button class="btn btn-dark" style="font-size: 12px;">Eliminar</button></a></td>
-                            </tr>
+                            </tr> -->
                           </tbody>
                         </table>
                       </div>
@@ -65,5 +65,6 @@
           </div>
         </div>
       </section>
+      <script src="./js/app.js"></script>
     </body>
 </html>
