--- a/vistas_canciones/listar_canciones.html
+++ b/vistas_canciones/listar_canciones.html
@@ -42,8 +42,8 @@
                               <th scope="col" colspan="2" style="text-align: center;">Acciones</th>
                             </tr>
                           </thead>
-                          <tbody>
-                            <tr style="font-size: 12px;">
+                          <tbody id="busqueda">
+                            <!-- <tr style="font-size: 12px;">
                               <th>1</th>
                               <th>una cancion</th>
                               <td>2</td>
@@ -51,7 +51,7 @@
                               <td>Juan Peña</td>
                               <td style="text-align: center;"><a href="./editar_cancion.html"><button class="btn btn-dark" style="font-size: 12px;">Editar</button></a></td>
                               <td style="text-align: center;"><a href="./"><button class="btn btn-dark" style="font-size: 12px;">Eliminar</button></a></td>
-                            </tr>
+                            </tr> -->
                           </tbody>
                         </table>
                       </div>
@@ -63,5 +63,6 @@
           </div>
         </div>
       </section>
+      <script src="./js/app.js"></script>
     </body>
 </html>
