--- a/vistas_usuarios/listar_usuarios.html
+++ b/vistas_usuarios/listar_usuarios.html
@@ -40,14 +40,14 @@
                               <th scope="col" colspan="2" style="text-align: center;">Acciones</th>
                             </tr>
                           </thead>
-                          <tbody>
-                            <tr style="font-size: 12px;">
+                          <tbody id="busqueda">
+                            <!-- <tr style="font-size: 12px;">
                               <td>1</td>
                               <td>Juanito Perez Cota</td>
                               <td>202cb962ac59075b964b07152d234b70</td>
-                              <td style="text-align: center;"><a href="./editar_usuario.html"><button class="btn btn-dark" style="font-size: 12px;">Editar</button></a></td>
+                              <td style="text-align: center;"><a href="./editar_usuario.html?id=1"><button class="btn btn-dark" style="font-size: 12px;">Editar</button></a></td>
                               <td style="text-align: center;"><a href="./"><button class="btn btn-dark" style="font-size: 12px;">Eliminar</button></a></td>
-                            </tr>
+                            </tr> -->
                           </tbody>
                         </table>
                       </div>
@@ -59,5 +59,6 @@
           </div>
         </div>
       </section>
+      <script src="./js/app.js"></script>
     </body>
 </html>
